--- a/app/Public/front/css/style.css
+++ b/app/Public/front/css/style.css
@@ -23,6 +23,7 @@ h2,
 h3 {
     text-align: center;
     text-transform: uppercase;
+    letter-spacing: 3px;
     color: rgb(177, 72, 58);
     -webkit-text-stroke: 2px rgb(235, 228, 173);
 }
@@ -31,9 +32,11 @@ h1 {
     font-size: 3em;
     margin-bottom: 40px;
 }
-h2{
-    margin-bottom: 40px;   
+
+h2 {
+    margin-bottom: 40px;
 }
+
 h3 {
     margin: 40px auto;
     -webkit-text-stroke: 1px rgb(235, 228, 173);
@@ -49,8 +52,7 @@ aside {
     display: none;
 }
 
-/**************************   ************************
- *********************** header **********************
+/*********************** header **********************
  **************************   ************************/
 
 header {
@@ -76,7 +78,6 @@ nav ul {
     width: 100%;
     text-align: center;
     background-color: rgba(0, 0, 0, 0.95);
-    opacity: 0.9;
     position: fixed;
     top: -440px;
     transition: top 1s ease;
@@ -111,7 +112,7 @@ nav img:hover {
 }
 
 .switch {
-    top: 50px;
+    top: 93px;
 }
 
 /*************************   ************************
@@ -120,32 +121,34 @@ nav img:hover {
 
 .container {
     width: 100%;
-    min-height:100vh;
+    min-height: 100vh;
     padding-top: 120px;
     color: white;
     background-color: black;
 }
 
 
-.cat {
+.categories{
     width: 100%;
     display: flex;
-    justify-content: right;
+
     font-size: 1.2em;
 
 }
 
-.cat p {
-    font-size:0.9em;
-    margin:10px;
-    padding:8px;
+.categories p {
+    font-size: 0.9em;
+    margin: 10px;
+    padding: 8px;
     border: 1px solid rgb(177, 72, 58);
     border-radius: 3%;
     -webkit-border-radius: 3%;
     -moz-border-radius: 3%;
     -ms-border-radius: 3%;
     -o-border-radius: 3%;
+
 }
+
 /*********** menu card *********/
 
 .menu_card {
@@ -192,12 +195,12 @@ nav img:hover {
 }
 
 .accueil ul {
-    width: 100%;
+    max-width: 90%;
     padding-bottom: 40%;
 }
 
 .accueil li {
-    width: 100%;
+    width: 90%;
     opacity: 0;
     position: absolute;
     left: 50%;
@@ -241,11 +244,11 @@ nav img:hover {
     margin: 20px auto;
     padding: 10px;
     border: 1px solid rgb(177, 72, 58);
-    border-radius:3%;
-    -moz-border-radius:3%;
-    -ms-border-radius:3%;
-    -o-border-radius:3%;
-    -webkit-border-radius:3%;
+    border-radius: 3%;
+    -moz-border-radius: 3%;
+    -ms-border-radius: 3%;
+    -o-border-radius: 3%;
+    -webkit-border-radius: 3%;
 }
 
 #reductions article p {
@@ -259,7 +262,7 @@ nav img:hover {
 .size_price {
     width: 100%;
     display: flex;
-    justify-content: right;
+    justify-content: flex-end;
 }
 
 .size_price p {
@@ -286,17 +289,19 @@ nav img:hover {
     margin: 0px 0;
     border: 3px solid rgb(235, 228, 173);
 }
+
 .form_contact input,
-.form_contact li{
-    color:rgb(177, 72, 58);
+.form_contact li {
+    color: rgb(35, 16, 7);
 }
+
 .form_contact label {
     margin-top: 15px;
 }
 
 .form_contact input,
 .form_contact ul li,
-.form_contact textarea  {
+.form_contact textarea {
     width: 80%;
     padding: 5px;
     text-align: center;
@@ -310,11 +315,11 @@ nav img:hover {
 
 .form_contact ul li {
     background-color: white;
-   
+
     font-size: 0.7em;
     margin: 3px auto;
     cursor: pointer;
-    
+
 }
 
 #submit {
@@ -329,6 +334,7 @@ nav img:hover {
 
 .display {
     display: none;
+
 }
 
 iframe {
@@ -343,6 +349,10 @@ iframe {
     -o-border-radius: 3%;
 }
 
+#didi span {
+    color: red;
+}
+
 /*********** connexion ************************/
 
 
@@ -351,17 +361,17 @@ iframe {
 }
 
 #is-show {
-    position:fixed;
+    position: fixed;
     min-width: 300px;
     text-align: center;
     padding: 35px;
     background-color: rgb(10, 4, 4);
     border: 3px solid rgb(235, 228, 173);
-    border-radius:3%;
-    -webkit-border-radius:3%;
-    -moz-border-radius:3%;
-    -ms-border-radius:3%;
-    -o-border-radius:3%;
+    border-radius: 3%;
+    -webkit-border-radius: 3%;
+    -moz-border-radius: 3%;
+    -ms-border-radius: 3%;
+    -o-border-radius: 3%;
     left: 50%;
     top: 50%;
     transform: translateY(-50%) translateX(-50%);
@@ -450,10 +460,22 @@ footer {
     margin: auto 18px;
 }
 
+#pageMentions {
+    color: aliceblue;
+    background-color: black;
+}
+
+/*********************** 404 *******************************/
+
+#trito {
+    font-size: 4em;
+}
+
+
 /********************* media screen ************************/
 
 @media screen and (min-width:1200px) {
- 
+
     .container {
         display: flex;
     }
@@ -516,6 +538,8 @@ footer {
 
     /****************** main ***************/
 
+    /**************** accueil **************/
+
     .accueil ul {
         padding-bottom: 28%;
     }
@@ -532,7 +556,7 @@ footer {
         font-size: 0.9em;
     }
 
-    /*****/
+    /*** contact **/
     .contact form {
         width: 550px;
     }
@@ -586,7 +610,7 @@ footer {
         -moz-border-radius: 3%;
         -ms-border-radius: 3%;
         -o-border-radius: 3%;
-}
+    }
 
     aside h4 {
         width: 100%;
@@ -669,14 +693,16 @@ footer {
         -o-transform: scale(0.92);
     }
 }
-@media print{
-    @media print{
-    header,
-    footer,
-    ul,
-    h3{
-        display:none;
+
+@media print {
+    @media print {
+
+        header,
+        footer,
+        ul,
+        h3 {
+            display: none;
+        }
+
     }
-    
-}
 }
