--- a/app/Public/back/css/style.css
+++ b/app/Public/back/css/style.css
@@ -5,30 +5,63 @@
     box-sizing: border-box;
     color: rgb(230, 225, 187);
 }
-
 li {
     list-style: none;
 }
-
 a {
     text-decoration: none;
 }
-
-main{
-    color: white;
-}
-
 h1,
 h2,
 h3 {
+    width: 100%;
     text-align: center;
     text-transform: uppercase;
     color: rgb(177, 72, 58);
     -webkit-text-stroke: 2px rgb(235, 228, 173);
 }
-h3{
-        -webkit-text-stroke: 1px rgb(235, 228, 173);
-    }
+h1 {
+    padding: 70px 0 32px 0;
+    font-size: 3.5em;
+}
+h3 {
+    -webkit-text-stroke: 1px rgb(235, 228, 173);
+}
+.container {
+    width: 100%;
+    height: 100vh;
+    padding-top: 40px;
+    background-color: black;
+}
+/*************** card******************/
+
+.card_articles {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    padding: 20px auto;
+    text-align: center;
+}
+.card_articles img {
+    width: 100%;
+    max-width: 666px;
+}
+.card_articles p {
+    margin: 20px auto;
+    font-size: 1.7em;
+}
+.card_articles button {
+    margin: 20px auto;
+}
+.card_articles a {
+    margin: 20px auto;
+    color: rgb(177, 72, 58);
+}
+button,
+input {
+    color: rgb(177, 72, 58);
+}
 
 /**************************   ************************
  *********************** header **********************
@@ -39,150 +72,64 @@ header {
     background-color: black;
     position: fixed;
 }
-#icons{
+
+#icons {
     font-size: 2.8em;
     text-align: right;
 }
-#icons i{
-    padding:15px 30px 0 0;
+
+#icons i {
+    padding: 15px 30px 0 0;
 }
-
-
-
-
-
-
-
-
-
-/*************************   ************************
- *********************** main ***********************
- *************************   ************************/
-
-.container {
-    width: 100%;
-    min-height:100vh;
-    padding-top: 20px;
-    background-color: black;
-   
-    
-}
-
-h1 {
-width:100%;
-    padding: 70px 0 32px 0;
-    text-align: center;
-    text-transform: uppercase;
-    font-size: 3.5em;
-  
-
-}
-
-
 
 /************ tableau de bord ***********/
-#tdb{
+#tdb {
     width: 100%;
-    text-align: center;
+    display: flex;
+    flex-wrap: wrap;
     background-color: black;
     padding: 40px 0;
-    
-    
-    
-}
-#tdb div{
-   width:300px;
-   background-color: rgb(177, 72, 58);
-   border:1px solid rgb(235, 228, 173);
-   border-radius: 4px;
-  margin:40px auto;
-  padding: 40px;
-   
-   font-size: 1.5em;
-   -webkit-border-radius: 4px;
-   -moz-border-radius: 4px;
-   -ms-border-radius: 4px;
-   -o-border-radius: 4px;
-}
-/********************* slider ************************/
-.card_articles{
-    width:100%;
-    text-align: center;
-    margin: 20px auto;
-}
-.card_articles img{
-    width:90%;
-    max-width: 666px;
-}
-.card_articles p{
-    margin: 20px auto;
-    font-size: 1.7em;
-}
-.card_articles button{
-    margin: 20px auto;
-}
-.card_articles a{
-    
-    color:rgb(177, 72, 58);
 }
 
-.card_articles{
-width:90%;
+#tdb div {
+    width: 300px;
+    background-color: rgb(177, 72, 58);
+    border: 1px solid rgb(235, 228, 173);
+    margin: 40px auto;
+    padding: 40px;
+    font-size: 1.5em;
+    border-radius: 4px;
+    -webkit-border-radius: 4px;
+    -moz-border-radius: 4px;
+    -ms-border-radius: 4px;
+    -o-border-radius: 4px;
 }
 
-.newImg{
+/************ add new ***********/
+.newOne {
     width: 100%;
     text-align: center;
 }
-.newImg p,
-.newImg form div{
-    margin: 20px auto;
-}
-.newImg form {
-    padding:20px;
-}
-#upload{
-    color:rgb(177, 72, 58);
-}
-/*********************** à la une ************/
 
-/********************* pizzas ***********/
-.pizzas{
-    padding:20px;
-}
-.pizzas .card_articles{
-    text-align: left;
-    width:90%;
-    margin: 20px auto;
-    }
-.newOne{
-    width:90%;
-    margin: 20px auto;
+.newOne h3,
+.newOne p,
+.newOne div {
     padding-bottom: 20px;
 }
-.newOne form{
-    
-   display: flex;
-   flex-direction: column;
-  
-   
-}
-.newOne label,
-.newOne textarea,
-.newOne input{
- width:80%;
- max-width:550px;
- margin-bottom: 10px;
- 
-}
-.subBtn button{
+
+form {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
     text-align: center;
-    color:rgb(177, 72, 58);
-    
 }
-#isVeg,
-#isPigless{
-    width:20%;  
+
+form label,
+form input,
+form textarea {
+    width: 360px;
+    margin: 20px auto;
 }
 /**************************   ************************
  *********************** footer **********************
@@ -191,40 +138,24 @@ footer {
     width: 100%;
     color: aliceblue;
     background-color: black;
-   
 }
-
-
 #mentions {
     display: flex;
 }
-
 #mentions img {
     width: 60px;
-
     margin: 0 0 10px 15px;
 }
-
 #mentions div {
     width: 100%;
     display: flex;
-    flex-wrap: wrap;
     justify-content: center;
 }
-
 #mentions p {
     padding: 1% 6%;
 }
+.raza {
 
-/********************* media screen ************************/
+    width: 100%;
 
-#lechat{
-    color: blue;
-}
-
-
-@media screen and (min-width:1200px) {
-    .card_articles img{
-        
-    }
 }
