--- a/app/Public/back/css/style.css
+++ b/app/Public/back/css/style.css
@@ -1,16 +1,18 @@
 * {
-    padding: 0;
     margin: 0;
     font-family: 'Arial Black', arial;
     box-sizing: border-box;
     color: rgb(230, 225, 187);
 }
+
 li {
     list-style: none;
 }
+
 a {
     text-decoration: none;
 }
+
 h1,
 h2,
 h3 {
@@ -18,49 +20,83 @@ h3 {
     text-align: center;
     text-transform: uppercase;
     color: rgb(177, 72, 58);
-    -webkit-text-stroke: 2px rgb(235, 228, 173);
+    -webkit-text-stroke: 1px rgb(235, 228, 173);
+    letter-spacing: 2px;
 }
+
 h1 {
     padding: 70px 0 32px 0;
     font-size: 3.5em;
 }
+
 h3 {
+    padding-top: 20px;
     -webkit-text-stroke: 1px rgb(235, 228, 173);
 }
+
 .container {
     width: 100%;
-    height: 100vh;
+    min-height: 100vh;
     padding-top: 40px;
     background-color: black;
 }
+
 /*************** card******************/
 
 .card_articles {
-    width: 100%;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    padding: 20px auto;
-    text-align: center;
+    width: auto;
+    min-width: 350px;
+    padding: 20px 20px;
 }
-.card_articles img {
-    width: 100%;
-    max-width: 666px;
-}
+
 .card_articles p {
     margin: 20px auto;
     font-size: 1.7em;
 }
+
 .card_articles button {
     margin: 20px auto;
 }
+
 .card_articles a {
     margin: 20px auto;
     color: rgb(177, 72, 58);
 }
+
 button,
-input {
+input,
+textarea {
     color: rgb(177, 72, 58);
+}
+
+.submit {
+    width: 100px;
+}
+/************ add new ***********/
+.newOne {
+    width: 100%;
+}
+
+.newOne p {
+    text-align: center;
+}
+
+
+form {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+}
+
+form label,
+form input,
+form textarea {
+    width: 360px;
+    margin: 20px auto;
+}
+
+form div {
+    text-align: center;
 }
 
 /**************************   ************************
@@ -87,15 +123,17 @@ header {
     width: 100%;
     display: flex;
     flex-wrap: wrap;
+    justify-content: center;
     background-color: black;
     padding: 40px 0;
 }
 
 #tdb div {
     width: 300px;
+    text-align: center;
     background-color: rgb(177, 72, 58);
     border: 1px solid rgb(235, 228, 173);
-    margin: 40px auto;
+    margin: 40px 50px;
     padding: 40px;
     font-size: 1.5em;
     border-radius: 4px;
@@ -105,32 +143,16 @@ header {
     -o-border-radius: 4px;
 }
 
-/************ add new ***********/
-.newOne {
-    width: 100%;
+/************* slides *****************/
+#slides .card_articles {
+    text-align: center;
+}
+/************* mis en avant**************/
+#show_on .card_articles {
     text-align: center;
 }
 
-.newOne h3,
-.newOne p,
-.newOne div {
-    padding-bottom: 20px;
-}
 
-form {
-    width: 100%;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    text-align: center;
-}
-
-form label,
-form input,
-form textarea {
-    width: 360px;
-    margin: 20px auto;
-}
 /**************************   ************************
  *********************** footer **********************
  **************************   ************************/
@@ -139,23 +161,28 @@ footer {
     color: aliceblue;
     background-color: black;
 }
+
 #mentions {
     display: flex;
 }
+
 #mentions img {
     width: 60px;
     margin: 0 0 10px 15px;
 }
+
 #mentions div {
     width: 100%;
     display: flex;
     justify-content: center;
 }
+
 #mentions p {
     padding: 1% 6%;
 }
-.raza {
-
-    width: 100%;
-
+/************media screen**********/
+@media screen and (max-width:666px) {
+    .card_articles img {
+        max-width: 340px;
+    }
 }
