--- a/app/Public/front/css/style.css
+++ b/app/Public/front/css/style.css
@@ -21,6 +21,8 @@ i {
 h1,
 h2,
 h3 {
+    margin-bottom: 40px;
+    margin-top: 30px;
     text-align: center;
     text-transform: uppercase;
     color: rgb(177, 72, 58);
@@ -30,15 +32,14 @@ h3 {
 
 h1 {
     font-size: 3em;
-    margin-bottom: 40px;
 }
 
 h2 {
-    margin-bottom: 40px;
+    font-size: 2.5em;
 }
 
 h3 {
-    margin: 40px auto;
+    font-size: 2em;
 }
 
 h4 {
@@ -90,10 +91,6 @@ nav ul li {
 
 nav i {
     font-size: 2.5em;
-}
-
-nav img {
-    width: 70px;
 }
 
 nav img:hover {
@@ -187,6 +184,7 @@ nav img:hover {
 .accueil {
     text-align: center;
 }
+
 .accueil ul {
     padding-bottom: 28%;
 }
@@ -197,13 +195,13 @@ nav img:hover {
     position: absolute;
     left: 50%;
     padding-bottom: 28%;
-
+    
     transform: translateX(-50%);
     -webkit-transform: translateX(-50%);
     -moz-transform: translateX(-50%);
     -ms-transform: translateX(-50%);
     -o-transform: translateX(-50%);
-
+    
     transition: 0.9s ease-in-out;
     -webkit-transition: 0.9s ease-in-out;
     -moz-transition: 0.9s ease-in-out;
@@ -339,7 +337,7 @@ iframe {
     -o-border-radius: 3%;
 }
 
-#didi span {
+.form_contact span {
     color: red;
 }
 
@@ -397,8 +395,8 @@ iframe {
 }
 
 /**************************   ************************
- *********************** footer **********************
- **************************   ************************/
+*********************** footer **********************
+**************************   ************************/
 footer {
     width: 100%;
     color: aliceblue;
@@ -436,7 +434,6 @@ footer {
 }
 
 #mentions img {
-    width: 70px;
     margin: 0 0 10px 15px;
     cursor: pointer;
 }
@@ -459,9 +456,9 @@ footer {
 }
 
 /*********************** 404 *******************************/
-/**/
+
 #error {
-    width: 100vw;
+    width: 100%;
     background-color: black;
     text-align: center;
 }
@@ -482,22 +479,22 @@ footer {
 /********************* media screen ************************/
 
 @media screen and (min-width:1200px) {
-
+    
     .container {
         display: flex;
     }
-
+    
     main {
         width: 60%;
         margin: 0 4%;
     }
-
+    
     /* --------------- modification du header ------------- */
-
+    
     #burger {
         display: none;
     }
-
+    
     nav ul {
         width: 100%;
         display: flex;
@@ -505,30 +502,30 @@ footer {
         background-color: rgba(0, 0, 0, 0.95);
         top: 0px;
     }
-
+    
     nav ul li {
         margin: 15px 50px;
     }
-
+    
     nav li::after {
         content: "";
         display: block;
         height: 2px;
         background-color: rgb(177, 72, 58);
-
+        
         transform: scale(0.0);
         -webkit-transform: scale(0.0);
         -moz-transform: scale(0.0);
         -ms-transform: scale(0.0);
         -o-transform: scale(0.0);
-
+        
         transition: transform 0.3s ease-in-out;
         -webkit-transition: transform 0.3s ease-in-out;
         -moz-transition: transform 0.3s ease-in-out;
         -ms-transition: transform 0.3s ease-in-out;
         -o-transition: transform 0.3s ease-in-out;
     }
-
+    
     nav li:hover::after {
         transform: scale(1);
         -webkit-transform: scale(1);
@@ -536,25 +533,25 @@ footer {
         -ms-transform: scale(1);
         -o-transform: scale(1);
     }
-
+    
     #icons p img {
         display: inline;
     }
-
+    
     /**************** accueil **************/
 
     .accueil li {
         width: auto;
         left: 33%;
     }
-
+    
     /***** pizzas ****/
-
+    
     .pizzas section {
-
+        
         font-size: 0.9em;
     }
-
+    
     /*** contact **/
     .contact form {
         width: 550px;
@@ -563,25 +560,25 @@ footer {
     .contact label {
         margin-top: 25px;
     }
-
+    
     .contact input {
         margin: 20px auto;
     }
-
+    
     #submit {
         width: 35%;
         margin-left: 34%;
     }
-
+    
     #content {
         height: 300px;
     }
-
+    
     iframe {
         width: 70%;
-
+        
     }
-
+    
     /************** aside ***************/
     aside {
         width: 24%;
@@ -589,19 +586,19 @@ footer {
         display: inline;
         margin: 1% 4%;
     }
-
+    
     aside div {
         width: 100%;
         text-align: center;
         margin-bottom: 70px;
     }
-
+    
     aside p {
         width: 100%;
         margin: 15px 0;
         font-size: 1.5em;
     }
-
+    
     aside img {
         border: 2px solid rgb(235, 228, 173);
         border-radius: 3%;
@@ -610,7 +607,7 @@ footer {
         -ms-border-radius: 3%;
         -o-border-radius: 3%;
     }
-
+    
     aside h4 {
         width: 100%;
         text-align: center;
@@ -619,6 +616,10 @@ footer {
         text-transform: uppercase;
         color: rgb(177, 72, 58);
         -webkit-text-stroke: 2px rgb(235, 228, 173);
+    }
+    .card_show_on{
+        text-align: center;
+        margin-bottom: 60px;
     }
 }
 
