--- a/app/Public/front/css/style.css
+++ b/app/Public/front/css/style.css
@@ -140,40 +140,35 @@ nav img:hover {
     -o-border-radius: 3%;
 }
 
-/*********** menu card *********/
+/*********** article *********/
 
-.menu_card {
-    width: 100%;
-    display: flex
-}
-
-.menu_name {
+.article_info {
     display: flex;
     justify-content: space-between;
     align-items: center;
 }
 
-.menu_price {
+.article_price {
     display: flex;
 }
 
-.menu_price p {
+.article_price p {
     margin: 10px 20px;
 }
 
-.card_title {
+.article_title {
     font-size: 1.3em;
     margin: 30px 0 30px 10px;
     text-transform: uppercase;
     text-decoration: underline;
 }
 
-.card_content {
+.article_content {
     width: 75%;
     padding: 15px;
 }
 
-#line {
+.line {
     width: 100%;
     height: 1px;
     background-color: rgb(177, 72, 58);
@@ -281,11 +276,6 @@ nav img:hover {
     border: 3px solid rgb(235, 228, 173);
 }
 
-.form_contact input,
-.form_contact li {
-    color: rgb(35, 16, 7);
-}
-
 .form_contact label {
     margin-top: 15px;
 }
@@ -293,6 +283,7 @@ nav img:hover {
 .form_contact input,
 .form_contact ul li,
 .form_contact textarea {
+    color: rgb(35, 16, 7);
     width: 80%;
     padding: 5px;
     text-align: center;
@@ -338,7 +329,8 @@ iframe {
 }
 
 .form_contact span {
-    color: red;
+    color:rgb(177, 72, 58);
+    font-size: 1em;
 }
 
 /*********** connexion ************************/
@@ -378,7 +370,7 @@ iframe {
 #is-show input {
     width: 50%;
     margin: 10px auto;
-    color: rgb(177, 72, 58);
+    color: black;
     text-align: center;
 }
 
@@ -434,6 +426,7 @@ footer {
 }
 
 #mentions img {
+
     margin: 0 0 10px 15px;
     cursor: pointer;
 }
@@ -446,8 +439,8 @@ footer {
     font-size: 0.7em;
 }
 
-#blabla p {
-    margin: auto 18px;
+#infos p {
+    margin: auto auto;
 }
 
 #pageMentions {
@@ -545,13 +538,6 @@ footer {
         left: 33%;
     }
     
-    /***** pizzas ****/
-    
-    .pizzas section {
-        
-        font-size: 0.9em;
-    }
-    
     /*** contact **/
     .contact form {
         width: 550px;
@@ -617,9 +603,14 @@ footer {
         color: rgb(177, 72, 58);
         -webkit-text-stroke: 2px rgb(235, 228, 173);
     }
-    .card_show_on{
+    .article_show_on_on{
         text-align: center;
         margin-bottom: 60px;
+    }
+    /**************** footer ****************/
+
+    #infos p {
+   font-size: 1.3em;
     }
 }
 
