--- a/app/Public/front/css/style.css
+++ b/app/Public/front/css/style.css
@@ -603,7 +603,7 @@ footer {
         color: rgb(177, 72, 58);
         -webkit-text-stroke: 2px rgb(235, 228, 173);
     }
-    .article_show_on_on{
+    .article_show_on{
         text-align: center;
         margin-bottom: 60px;
     }
