--- a/app/Public/front/css/style.css
+++ b/app/Public/front/css/style.css
@@ -106,7 +106,11 @@ nav img:hover {
     margin-top: 13px;
     cursor: pointer;
 }
-
+#userIcon{
+    margin-top: 13px;
+    cursor: pointer;
+    font-size: 0.9em;
+}
 .switch {
     top: 93px;
 }
