--- a/app/Public/back/css/style.css
+++ b/app/Public/back/css/style.css
@@ -159,7 +159,11 @@ header {
 #slides .card_articles {
     text-align: center;
 }
-
+/************** desinscription ***********/
+#supUser{
+    width: 100%;
+    text-align: center;
+}
 /**************************   ************************
  *********************** footer **********************
  **************************   ************************/
