--- a/app/Public/front/css/style.css
+++ b/app/Public/front/css/style.css
@@ -93,6 +93,7 @@ nav i {
     font-size: 2.5em;
 }
 
+
 nav img:hover {
     animation: logo_icons 0.8s ease-in-out;
     -webkit-animation: logo_icons 0.8s ease-in-out;
@@ -249,6 +250,7 @@ nav img:hover {
     font-size: 0.8em;
     padding: 5px 0;
 }
+
 
 /*********** pizzas *************/
 
@@ -595,6 +597,8 @@ footer {
     }
 
     aside img {
+        width:250px;
+        height: 150px;
         border: 2px solid rgb(235, 228, 173);
         border-radius: 3%;
         -webkit-border-radius: 3%;
